# power-management-board

./: .gitignore  .mxproject  CMakeLists.txt  README.md  power-management-board.ioc
Core/Inc/: main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
Core/Src/: adc.c  dma.c  fdcan.c  gpio.c  main.c  stm32g4xx_it.c
cmake/stm32cubemx/: CMakeLists.txt
docs/: specification.md
power-management-board/: fp-info-cache  power-management-board.kicad_pcb  power-management-board.kicad_prl  power-management-board.kicad_pro  power-management-board.kicad_sch
power-management-board/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
power_management/: CMakeLists.txt
power_management/include/power_management/: fdcan_driver.hpp
power_management/src/: app.cpp  fdcan_driver.cpp
